Correct stretch for flexline section + Create Quote section CSS

--- a/landing_page-final-exercice/css/styles.css
+++ b/landing_page-final-exercice/css/styles.css
@@ -95,7 +95,7 @@ header {
 /* Flexline section */
 
 .flexline {
-    margin: 40px 40px 80px 40px;
+    margin: 40px 8rem 80px 8rem;
 }
 
 
@@ -115,7 +115,10 @@ header {
 .flexline-container {
     display: flex;
     height: fit-content;
-    justify-content: center;
+    justify-content: space-evenly;
+
+    gap: 40px;
+
 }
 
 /* Container Content */
@@ -124,26 +127,45 @@ header {
     height: fit-content;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: stretch;
+    gap: 10px;
 }
 
 .imagecolor {
-    max-width: 80%;
+    max-width: 100%;
     max-height: 100%;
-    margin: 0 0 10px 0;
 }
+
 
 .imagecolor .color {
     background-color: white;
-    width: 200px;
+    width: 100%;
     height: 150px;
-    border: 4px solid darkblue;
+    border: 4px solid #3882f6;
     border-radius: 15px;
 }
 
 .textcolor {
     text-align: center;
-    margin: 0 20px 0 20px;
-    width: 80%;
+    margin: 0;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
+}
+
+.quote {
+    padding: 8rem;
+    background-color: #e5e7eb;
+}
+
+.quote-text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 36px;
+    color: #1f2937;
+}
+
+.author-text{
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    text-align: right;
 }
